ghc-4335c07/testsuite/tests/polykinds/T11399.stderr

T11399.hs:10:32: error:
    • Couldn't match kind ‘*’ with ‘GHC.Types.RuntimeRep’
      When matching kinds
        a :: * -> *
        TYPE :: GHC.Types.RuntimeRep -> *
      Expected kind ‘* -> *’, but ‘UhOh a’ has kind ‘a * -> *’
    • In the first argument of ‘Functor’, namely ‘(UhOh a)’
      In the instance declaration for ‘Functor (UhOh a)’
